...
    });
  }

  render() {
    const {items} = this.state;
    return (
        <View testID="welcome" style={styles.body}>
          <Text>ToDo TDD</Text>
          <AddTodo onAdded={this.onAdded}></AddTodo>
          <TodoList items={items} onCompleted={this.onCompleted} onDeleted={this.onDeleted}></TodoList>
        </View>
    );

...
